<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_rooms"
        android:title="AULE"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_main_day_view"
        app:showAsAction="never"
        android:title="@string/menu_main_top_bar_day" />
    <item
        android:id="@+id/menu_main_week_view"
        app:showAsAction="never"
        android:title="@string/menu_main_top_bar_week" />
    <item
        android:id="@+id/menu_main_refresh"
        app:showAsAction="never"
        android:title="@string/menu_main_top_bar_refresh" />
    <item
        android:id="@+id/menu_main_settings"
        app:showAsAction="never"
        android:title="@string/menu_main_top_bar_settings" />
</menu>