<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_day_view"
        android:icon="@drawable/menu_main_top_bar_day"
        android:visible="false"
        app:showAsAction="always"
        android:title="@string/menu_main_top_bar_day" />
    <item
        android:id="@+id/menu_main_week_view"
        android:icon="@drawable/menu_main_top_bar_week"
        android:visible="false"
        app:showAsAction="always"
        android:title="@string/menu_main_top_bar_week" />
    <item
        android:id="@+id/menu_main_refresh"
        android:icon="@drawable/menu_main_top_bar_refresh"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:title="@string/menu_main_top_bar_refresh" />
    <item
        android:id="@+id/menu_main_change_course"
        app:showAsAction="never"
        android:title="@string/menu_main_top_bar_change_course" />
    <item
        android:id="@+id/menu_main_settings"
        app:showAsAction="never"
        android:title="@string/menu_main_top_bar_settings" />
</menu>